--- a/headerstyle.css
+++ b/headerstyle.css
@@ -389,6 +389,9 @@
     .header-comp{
         display: block;
     }
+    .menu-list{
+        display: none;
+    }
     
 }
 @media(max-width:1182px)
